# vaila

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  AGENT_HISTORY.md  CLAUDE.md  CONTRIBUTING.md  DESKTOP_INTEGRATION_README.md  HISTORY.md  README.md  SECURITY.md  check_wm_class.py  create_dmg_installer.sh  create_linux_packages.sh  environment.yml  environment_draft_macos.yml  fix_cairo_deps.sh  fix_desktop_integration.sh  fix_kde_integration.sh  gemini_help.txt  generate_button_docs.py  generate_help_docs.py  get_anthropic_skills.sh  install-hooks.sh  install_vaila_linux.sh  install_vaila_linux_uv.sh  install_vaila_mac.sh  install_vaila_mac_uv.sh  install_vaila_win.bat  install_vaila_win.ps1  install_vaila_win_uv.ps1  linux_launch_vaila.sh  mac_launch_vaila.sh  mkdocs.yml  new_tkinter_class.py  pyproject.toml  pyproject_linux_cuda12.toml  pyproject_macos.toml  pyproject_universal_cpu.toml  pyproject_win_cuda12.toml  (+23 more)
.claude/agents/: gui-developer.md  video-processor.md
.claude/commands/: check.md  new-module.md
.claude/skills/: create-analysis-module.md  port-matlab-algorithm.md  vaila-assistant-generator.md
.cursor/rules/: vaila.mdc
.opencode/: package-lock.json
.opencode/skills/: vaila-assistant-generator.md
.vim/: coc-settings.json
data/markerless_2D_video/: README.md
data/mocap_fullbody/: README.md
docs/: .help.html.kate-swp  404.html  README.md  README_bk.md  SESSION_SUMMARY_AI_AGENTS.md  additional-commands.md  fifa_workflow.md  help.html  help.md  help.txt  history.md  imagecluster.odg  index.html  index.md  loadcell_treadmill_integration_handoff.md  markerless-2d-video.md  markerless2d_yolo26.md  markerless_2d_gpu_cli_history.md  overview.md  pdf_transcription.html  pdf_transcription.md  run_docs.sh  style.css  treadmill_lc_integration_handoff.md  vaila-manifest.md  vek.md  walkway_ml.md
docs/api/: functions.md  modules.md
docs/help/: scout_vaila.html  scout_vaila.md
docs/images/: vaila.icns
docs/installation/: environment-setup.md  requirements.md  troubleshooting.md
docs/search/: search_index.json
docs/sessions/: 2026-06-14-getpixel-sam3-crosschunk.md  2026-06-15-getpixel-savefreeze-readme-bbox-alias.md  2026-07-06-yolo-fb-gui-cli-mirror.md  2026-07-07-sapiens-output-dir-fix.md
docs/tutorials/: advanced-features.md  markerless-tutorial.md  quick-start.md
docs/vaila_buttons/: Deadlift.md  README.md  animal-open-field.md  brainstorm.md  cluster-analysis.md  copy-file.md  cube2d-kinematics.md  cut-videos.md  data-filtering.md  deadlift.md  eeg-analysis.md  emg-analysis.md  export-file.md  face-mesh.md  fifa-dataset-builder.md  fifa-to-dlt.md  find-file.md  force-analysis.md  gnss-analysis.md  hr-analysis.md  import-file.md  imu-analysis.md  markerless-2d-analysis.md  markerless-2d-button.html  markerless-2d-button.md  markerless-2d-video.md  markerless-3d-analysis.md  markerless-hands.md  markerless-live.md  markerless2d-mpyolo.md  metadata-info.md  ml-walkway.md  mocap-analysis.md  move-file.md  mp-angles-calculation.html  mp-angles-calculation.md  remove-file.md  (+20 more)
hooks/: pre-commit
import/: Sensor Pelvis_results.csv  Sensor Trunk_results.csv
multimodal_mocap_coord_toolbox/: __init__.py  cluster_analysis.py  cluster_analysis_cli.py  compress_videos_h264.py  compress_videos_h265.py  compressvideo.py  data_processing.py  dialogsuser.py  dialogsuser_cluster.py  dlt2d.py  drawboxe.py  emg_labiocom.py  imu_analysis copy.py  markerless_2D_analysis.py  mergestack.py  metadatavid.sh  mocap_analysis copy.py  mocap_analysis.py  modifylabref.py  modifylabref_cli.py  numberframes.py  readcsv copy.py  rearrange_data.py  rearrange_data_dask.py  rec2d.py  rec2d_one_dlt2d.py  run_vector_coding_GUI.py  showc3d.py  utils.py  vaila_manifest.py  vailaplot2d.py  videos_synchronization.py
notebooks/: README.md
results/: README.md
sam_3d_body/: LICENSE.SAM_3D_BODY_META  VENDOR_vaila.txt  __init__.py  build_models.py  sam_3d_body_estimator.py
scripts/: README.md  convert_docs.py  realesrgan-ncnn-vulkan.zip.034
site/: 404.html  index.html
tests/: README.md  full.csv  gait_Left_foot.csv  test_bbox_export.py  test_crop_faces_atletas.py  test_cutvideo.py  test_dlt_rec.py  test_dlt_rec_integration.py  test_ffmpeg_nvenc_helpers.py  test_fifa_anthropometry.py  test_fifa_bootstrap.py  test_fifa_check_labels_dedupe.py  test_fifa_dataset_builder.py  test_fifa_dataset_train_readiness.py  test_fifa_manual_merge.py  test_fifa_skeletal_pipeline.py  test_fifa_to_dlt.py  test_fifa_yolo_dataset_qa.py  test_geometric_reid.py  test_getpixelvideo_markers_io.py  test_getpixelvideo_sapiens_loader.py  test_loadcell_treadmill.py  test_markerless2d_v2_tracker_reset.py  test_markerless_2d_merge_warmup.py  test_reid_markers_geometric.py  test_reid_yolotrack.py  test_remove_frames2sync.py  test_rf_trackers.py  test_sam_postprocess.py  test_sam_to_yolo.py  test_sam_validate.py  test_shot_orientation.py  test_soccerfield_calib.py  test_treadmill_lc.py  test_tugturn.py  test_tugturn_integration.py  test_usound_biomec1.py  test_vaila_and_jump.py  test_vaila_and_jump_integration.py  test_vaila_cli_menu.py  (+9 more)
vaila/: BATCH_PROCESSING_README.md  BRAINSTORM_GUIDE.md  HardwareManager.py  README.md  __init__.py  __main__.py  animal_open_field.py  backup_markerless.py  basketball_court.py  batchcut.py  brainstorm.py  cluster_analysis.py  cluster_analysis_cli.py  codec_benchmark.py  common_utils.py  compress_videos_h264.py  compress_videos_h265.bat  compress_videos_h265.py  compress_videos_h265.sh  compress_videos_h266.py  compressvideo.py  convert_videos_ts_to_mp4.py  cop_analysis.m  cop_analysis.py  cop_calculate.py  crop_faces_atletas.py  csv_distort_params_to_toml.py  cube2d_kinematics.py  cutvideo.py  data_processing.py  dialogsuser.py  dialogsuser_cluster.py  dlc2vaila.py  dlt2d.py  dlt3d.py  drawboxe.py  drawsportsfields.py  ellipse.py  emg_labiocom.py  example_batch_usage.py  (+162 more)
yaml_for_conda_env/: README.md  environment_linux_nvidia.yml  environment_macos.yml  environment_windows.yml  vaila_json_for_Windows_Terminal.txt  vaila_linux.yaml  vaila_mac.yaml  vaila_win.yaml
(+1318 files in other folders)
