[tool.poetry]
name = "vaila"
version = "0.1.0"
description = "\"vailá - Versatile Anarcho Integrated Liberation Ánalysis in Multimodal Toolbox\""
authors = ["vailá <vailamultimodaltoolbox@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
anyio = "4.4.0"
appnope = "0.1.4"
argon2-cffi = "23.1.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "23.2.0"
babel = "2.14.0"
beautifulsoup4 = "4.12.3"
blas = "1.0"
bleach = "6.1.0"
bokeh = "3.5.0"
bottleneck = "1.3.7"
brotli = "1.1.0"
cached-property = "1.5.2"
cairo = "1.18.0"
certifi = "2024.7.4"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpickle = "3.0.0"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
cytoolz = "0.12.3"
dask = "2024.7.0"
debugpy = "1.8.2"
decorator = "5.1.1"
defusedxml = "0.7.1"
distributed = "2024.7.0"
entrypoints = "0.4"
et_xmlfile = "1.1.0"
exceptiongroup = "1.2.2"
executing = "2.0.1"
fsspec = "2024.6.1"
future = "1.0.0"
gast = "0.6.0"
ghp-import = "2.1.0"
grpcio = "1.65.0"
h5py = "3.11.0"
h11 = "0.14.0"
h2 = "4.1.0"
heapdict = "1.0.1"
hpack = "4.0.0"
httpcore = "1.0.5"
httpx = "0.27.0"
hyperframe = "6.0.1"
idna = "3.7"
importlib-metadata = "8.0.0"
importlib_resources = "6.4.0"
imufusion = "1.2.5"
ipykernel = "6.29.5"
ipython = "8.26.0"
ipython_genutils = "0.2.0"
ipywidgets = "8.1.3"
isoduration = "20.11.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jupyter = "1.0.0"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.0"
jupyter_console = "6.6.3"
jupyter_core = "5.7.2"
jupyter_events = "0.10.0"
jupyter_server = "2.14.2"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.2.4"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
jupyterlab_widgets = "3.0.11"
kiwisolver = "1.4.5"
libcblas = "3.9.0"
markdown-it-py = "2.2.0"
markupsafe = "2.1.5"
matplotlib = "3.8.4"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mistune = "3.0.2"
msgpack-python = "1.0.8"
munkres = "1.1.4"
nbclassic = "1.1.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
numexpr = "2.8.7"
numpy = "1.26.4"
openpyxl = "3.1.5"
opt-einsum = "3.3.0"
overrides = "7.7.0"
packaging = "24.1"
paginate = "0.5.6"
pandas = "2.2.2"
pandocfilters = "1.5.0"
parso = "0.8.4"
partd = "1.4.2"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pillow = "10.4.0"
pip = "24.2"
plotly = "5.22.0"
prometheus_client = "0.20.0"
prompt_toolkit = "3.0.47"
protobuf = "4.25.3"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.2"
pyarrow = "17.0.0"
pybind11-abi = "5"
pycparser = "2.22"
pygments = "2.18.0"
pyobjc-core = "10.3.1"
pyobjc-framework-cocoa = "10.3.1"
pyparsing = "3.0.9"
pysocks = "1.7.1"
python-dateutil = "2.9.0post0"
python-fastjsonschema = "2.20.0"
python-json-logger = "2.0.7"
python-lmdb = "1.4.1"
tzdata = "2024.1"
pytz = "2024.1"
pyyaml = "6.0.1"
pyzmq = "25.1.2"
qtconsole = "5.5.2"
qtpy = "2.4.1"
gnureadline = "8.2.10"
referencing = "0.35.1"
regex = "2024.7.24"
requests = "2.32.3"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.7.1"
rpds-py = "0.19.0"
scipy = "1.12.0"
seaborn = "0.13.2"
send2trash = "1.8.3"
setuptools = "71.0.1"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
stack_data = "0.6.2"
tblib = "3.0.0"
terminado = "0.18.1"
tinycss2 = "1.3.0"
tomli = "2.0.1"
toolz = "0.12.1"
tornado = "6.4.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20240316"
typing-extensions = "4.12.2"
typing_utils = "0.1.0"
uri-template = "1.3.0"
urllib3 = "2.2.2"
watchdog = "4.0.1"
wcwidth = "0.2.13"
webcolors = "24.6.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
widgetsnbextension = "4.0.11"
wrapt = "1.16.0"
xlrd = "2.0.1"
xyzservices = "2024.6.0"
zict = "3.0.0"
zipp = "3.19.2"
zstandard = "0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
blue = "0.9.1"

[tool.poetry.group.doc.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
